--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 * {
-  color: #43434310;
+  color: #2a2829;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
@@ -31,8 +31,8 @@ a:hover{
 
 /*hero banner*/
 .hero-banner{
-  background-image:  linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../images/brick-wall-hero.jpg");
-  height: 50%;
+  background-image:  linear-gradient(rgba(38, 35, 35, 0.5), rgba(196, 49, 49, 0.5)), url("../images/brick-wall-hero.jpg");
+  height: 65%;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -47,11 +47,11 @@ a:hover{
   position: absolute;
   left: 50%;
   transform: translate(-50%, -50%);
-  color: #09070a;
+  color: #2c2b2b;
 }
 
 .hero-text h1{
-  font-size: 75px;
+  font-size: 65px;
   top: 50%;
 }
 
@@ -97,7 +97,7 @@ padding: 3em;
   grid-template-rows: 300px 200px 200px;
   grid-template-areas: 
   "horiseon horiseon"
-  "cheekyChoc genshinDev"
+  "p genshinDev"
   "paimonMoe unfinishedProject";
 }
 
@@ -131,22 +131,22 @@ padding: 3em;
 }
 
 #amenities{
-  grid-area: amenities;
+  grid-area: prework;
   background-image: url(../images/amenities.website.png);
 }
 
 #photography{
-  grid-area: photography;
+  grid-area: landing;
   background-image: url(../images/camera-laptop.png);
 } /*open source*/
 
 #development{
-  grid-area: development;
+  grid-area: portfolio;
   background-image: url(../developer-laptop.png);
 }/*open source*/
 
 #workingon{
-  grid-area: workingon;
+  grid-area: super-fiesta;
   background-image: url(../programming-computer.png);
 }
 /*grid*/
@@ -161,11 +161,11 @@ padding: 3em;
 
 #contact{
   display: flex;
-flex-wrap: wrap;
-justify-content: space-evenly;
-align-items: center;
-align-content: center;
-margin-bottom: 3em;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+  align-content: center;
+  margin-bottom: 3em;
 }
 
 /*footer*/
